# reStrike_VTA_Cursor

./: .gitignore  ANALYTICS_IMPLEMENTATION_SUMMARY.md  BACKEND_ARCHITECTURE.md  CHAT_SESSION_COMPLETED_TASKS.md  CHECKPOINT_2024_12_19.md  CHECKPOINT_ENVIRONMENT_SYSTEM.md  CHECKPOINT_SUMMARY.md  CONTINUATION_PROMPT.md  CONTINUATION_SUMMARY_2025_01_28.md  Cargo.toml  DATABASE_INTEGRATION_GUIDE.md  DATA_FLOW_ARCHITECTURE.md  DEV-CONTAINER-CHECKLIST-UPDATED.md  DEV-CONTAINER-CHECKLIST.md  ENHANCED_PSS_EVENT_SYSTEM.md  FINAL_SESSION_SUMMARY.md  FRAMEWORK_UPDATE_SUMMARY.md  FRONTEND_ARCHITECTURE.md  FRONTEND_DEVELOPMENT_SUMMARY.md  HIT_LEVEL_TRACKING_IMPLEMENTATION.md  INJURY_EVENT_FIX_SUMMARY.md  INJURY_EVENT_IMPLEMENTATION.md  LIBRARY_STRUCTURE.md  LICENSE  LOGGING_CRASH_FIX_SUMMARY.md  LOGGING_REBUILD_LOOP_FIX.md  LOGGING_SYSTEM_TEST_GUIDE.md  NETWORK_ACCESSIBILITY_EXE_GUIDE.md  NETWORK_ACCESSIBILITY_GUIDE.md  NEXT_SESSION_TASK_LIST.md  PERFORMANCE_OPTIMIZATION.md  PHASE2_COMPLETION_SUMMARY.md  PHASE3_COMPLETION_SUMMARY.md  PROJECT_CONTEXT.md  PROJECT_REORGANIZATION_SUMMARY.md  PROJECT_STRUCTURE.md  PSS_EVENT_SYSTEM_ENHANCEMENT_PLAN.md  PSS_STATUS_MARK_SYSTEM_ENHANCEMENTS.md  PSS_SYSTEM_ENHANCEMENT_SUMMARY.md  README.md  (+44 more)
.cargo/: config.toml
.devcontainer/: Dockerfile  README-devcontainer.md  devcontainer.json
.github/: dependabot.yml  labels.yml
config/: dev_resources.json
docs/: ARCHITECTURE.md  DEVELOPMENT.md  DOCKER_HOT_RELOAD_SETUP.md  DOCUMENTATION_INDEX.md  EVENT_TABLE_DATABASE_ENHANCEMENT_PLAN.md  FLAG_MANAGEMENT_SYSTEM.md  FRAMEWORK_UPDATES.md  FRONTEND_DEVELOPMENT_SUMMARY.md  I18N_WORKFLOW.md  IMPLEMENTATION_SUMMARY.md  IVR_REPLAY_MATCH_HISTORY.md  Instant_Video_Replay_PRD.md  LIBRARY_STRUCTURE.md  OBS_INTEGRATION.md  OBS_MIGRATION_IMPLEMENTATION_STEPS.md  OBS_WEBSOCKET_MIGRATION_PLAN.md  PORT_FORWARDING.md  PROJECT_CONTEXT.md  PROJECT_STRUCTURE.md  QA_OBS_OBWS_VERIFICATION_CHECKLIST.md  README.md  SECURITY_ENHANCEMENT_PLAN.md  Software_Requirements_Specification.md  TODO.md  TODO_RECORDING.md  UI_Design_Document.md
hardware_simulator/: INTEGRATION_GUIDE.md  QUICKSTART.md  README.md  SIMULATOR_SUMMARY.md  config.json  example_usage.py  quick_test.py  requirements.txt  test_integration.py  tkstrike_hardware_simulator.py
protocol/: pss_schema.txt  pss_v2.3.txt
scripts/: README.md  download-all-svg-flags.js  download-flags-from-api.js  download-svg-flags-simple.js  download-svg-flags-wikipedia.js  download-svg-flags.js  download_all_png_codes.py  download_correct_flags.py  download_final_flags.py  download_ioc_svg_flags.py  download_missing_flags.py  download_missing_from_all_tables.py  download_remaining_flags.py  download_svg_flags.py  download_svg_flags_from_report.py  generate_clip.sh  license_tool.py  scrape-wikipedia-flags.js  scrape_all_ioc_tables.py  scrape_ioc_wikipedia.py  search_wikipedia_flags.py  setup_obs_websocket.sh  update_frameworks.sh  verify_ports.sh
src-tauri/: .taurignore  Cargo.toml  build.rs  capabilities.json  json_settings_backup_1753282750.json  json_settings_backup_1753283220.json  json_settings_backup_1753315817.json  json_settings_backup_1753315915.json  json_settings_backup_1753317491.json  json_settings_backup_1753317742.json  tauri.conf.json  test_path_fix.rs
src-tauri/backups/: json_settings_backup_1753282266.json  json_settings_backup_1753310052.json  json_settings_backup_1753310060.json  json_settings_backup_1753310897.json  json_settings_backup_1753314481.json  json_settings_backup_1753314648.json  json_settings_backup_1753317063.json  json_settings_backup_1753317264.json  json_settings_backup_1753352294.json  json_settings_backup_1753352300.json  json_settings_backup_1753360042.json  json_settings_backup_1753363684.json  json_settings_backup_1753367473.json  json_settings_backup_1753373757.json  json_settings_backup_1753373759.json  json_settings_backup_1753382102.json  json_settings_backup_1753430514.json  json_settings_backup_1753437906.json  json_settings_backup_1753440126.json  json_settings_backup_1753440131.json  json_settings_backup_1753440219.json  json_settings_backup_1753442185.json  json_settings_backup_1753444059.json
src-tauri/capabilities/: main-dialog.json  main-events.json
src-tauri/config/: app_config.backup.json  app_config.json
src-tauri/src/: lib.rs  main.rs  tauri_commands.rs  tauri_commands_manual_mode.rs  tauri_commands_obs_connections.rs  tauri_commands_obws.rs  tauri_commands_overlays.rs  tauri_commands_security.rs  tauri_commands_triggers.rs  ui_settings.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/config/: manager.rs  mod.rs  types.rs
src-tauri/src/core/: app.rs  config.rs  state.rs
src-tauri/src/database/: async_connection.rs  connection.rs  error.rs  maintenance.rs  migration_strategy.rs  migrations.rs  mod.rs  models.rs  operations.rs  settings_manager.rs
src-tauri/src/logging/: archival.rs  logger.rs  mod.rs  rotation.rs
src-tauri/src/obs/: commands.rs  manager.rs
src-tauri/src/plugins/: advanced_analytics.rs  event_cache.rs  event_stream.rs  load_balancer.rs  mod.rs  performance_monitor.rs  plugin_cpu_monitor.rs  plugin_database.rs  plugin_drive.rs  plugin_file_server.rs  plugin_license.rs  plugin_obs.rs  plugin_playback.rs  plugin_protocol_manager.rs  plugin_store.rs  plugin_tournament.rs  plugin_triggers.rs  plugin_udp.rs  plugin_websocket.rs  youtube_api.rs
src-tauri/src/plugins/obs/: control_room.rs  control_room_async.rs  core.rs  events.rs  manager.rs  mod.rs  recording.rs  scenes.rs  settings.rs  status.rs  streaming.rs  types.rs
src-tauri/src/plugins/obs_obws/: client.rs  manager.rs  mod.rs  operations.rs  path_generator.rs  recording_events.rs  test_implementation.rs  types.rs
src-tauri/src/pss/: events.rs  listener.rs  mod.rs  protocol.rs
src-tauri/src/security/: audit.rs  config_manager.rs  encryption.rs  key_manager.rs  migration.rs  mod.rs
src-tauri/src/types/: mod.rs
src-tauri/src/utils/: logger.rs  mod.rs  network.rs  simulation_env.rs
src-tauri/src/video/: clips.rs  mod.rs  overlay.rs
src-tauri/tests/: security_integration_test.rs
(+377 files in other folders)
