[package]
name = "re_strike_vta"
version = "0.1.0"
description = "Windows desktop application for taekwondo referees using Tauri and React"
authors = ["damjanZGB"]
license = "MIT"
repository = "https://github.com/reStrike-d-o-o/reStrike_VTA_Cursor"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = "2.3.0"

[dependencies]
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tauri = { version = "2.3.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.0", features = ["v4"] }
tokio-tungstenite = "0.21"
futures-util = "0.3.31"
log = "0.4.27"
fern = "0.7.1"
sha2 = "0.10.9"
base64 = "0.22.1"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
opt-level = 1
debug = true
strip = false
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
codegen-units = 256
incremental = true

[profile.release]
opt-level = 3
debug = false
strip = true
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
codegen-units = 1
incremental = false 
