[package]
name = "re-strike-vta"
version = "0.1.0"
description = "reStrike VTA - Taekwondo Video Replay Manager"
authors = ["reStrike Team"]
license = "MIT"
repository = "https://github.com/restrike/vta"
edition = "2021"

[lib]
name = "re_strike_vta"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
thiserror = "1.0"
rusqlite = { version = "0.29", features = ["bundled"] }
reqwest = { version = "0.11", features = ["json"] }
sysinfo = "0.29"
machine-uid = "0.3"
base64 = "0.21"
hex = "0.4"
sha2 = "0.10"
aes-gcm = "0.10"
rand = "0.8"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
opt-level = 1
debug = true
strip = false
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
codegen-units = 256
incremental = true

[profile.release]
opt-level = 3
debug = false
strip = true
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
codegen-units = 1
incremental = false 
