[package]
name = "re-strike-vta"
version = "0.1.0"
description = "reStrike VTA - Taekwondo Video Replay Manager"
authors = ["reStrike Team"]
license = "MIT"
repository = "https://github.com/restrike/vta"
edition = "2021"

[lib]
name = "re_strike_vta"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "re-strike-vta-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["custom-protocol"] }
tauri-plugin-shell = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"
rusqlite = { version = "0.30.0", features = ["bundled"] }
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls", "multipart"] }
sysinfo = "0.29"
machine-uid = "0.3"
base64 = "0.21"
hex = "0.4"
sha2 = "0.10"
aes-gcm = "0.10"
rand = "0.8"
zip = "0.6"
flate2 = "1.0"
num_cpus = "1.16"
once_cell = "1.21.3"
oauth2 = "4"
dirs = "5"

[features]
custom-protocol = ["tauri/custom-protocol"] 
